--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -103,7 +103,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create our session (link) from Python to the DB\n",
+    "session = Session(engine)"
+   ]
   }
  ],
  "metadata": {
