--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -100,13 +100,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create our session (link) from Python to the DB\n",
     "session = Session(engine)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploratory Climate Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last Date in DB: 2017-08-23\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Design a query to retrieve the last 12 months of precipitation data and plot the results\n",
+    "last_data_point = session.query(func.max(Measurement.date)).first()[0]\n",
+    "\n",
+    "year = int(last_data_point.split('-')[0])\n",
+    "mth = int(last_data_point.split('-')[1])\n",
+    "date = int(last_data_point.split('-')[2])\n",
+    "\n",
+    "last_date_in_db = dt.date(year, mth, date)\n",
+    "print(\"Last Date in DB:\", last_date_in_db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
