Calculate the date 1 year ago from the last data point

--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -142,6 +142,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "One year ago: 2016-08-23 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the date 1 year ago from the last data point in the database\n",
+    "one_year_ago = last_date_in_db - dt.timedelta(days=365)\n",
+    "print(\"\\nOne year ago:\", one_year_ago,\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
