Perform a query to retrieve the data and precipitation scores

--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -163,6 +163,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT measurement.date, measurement.prcp \n",
+      "FROM measurement \n",
+      "WHERE measurement.date >= :date_1 ORDER BY measurement.date\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Perform a query to retrieve the data and precipitation scores\n",
+    "query = session.query(Measurement.date, Measurement.prcp)\\\n",
+    "                    .filter(Measurement.date >= one_year_ago)\\\n",
+    "                    .order_by(Measurement.date).statement\n",
+    "print(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
